--- a/pub/wefound.yaml
+++ b/pub/wefound.yaml
@@ -6,21 +6,6 @@ log-level: info
 external-controller: 0.0.0.0:9090
 proxies:
   - &id001
-    name: 🇨🇭_CH_瑞士->🇭🇰_HK_香港_1
-    type: vmess
-    server: 64.110.65.177
-    port: 25857
-    cipher: auto
-    uuid: 414365d6-12fb-3530-8135-ad14b8ad7726
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /db00
-      headers:
-        host: data-hk-3.cn-db.top
-  - &id002
     name: 🇨🇳_CN_中国->🇺🇸_US_美国_1
     type: vmess
     server: 183.232.170.22
@@ -31,70 +16,125 @@ proxies:
     tls: false
     skip-cert-verify: true
     network: tcp
-  - &id003
-    name: 🇰🇷_KR_韩国->🇭🇰_HK_香港_1
+  - &id002
+    name: 🇺🇸_US_美国->🇨🇦_CA_加拿大_1
     type: vmess
-    server: 130.162.151.122
-    port: 32454
+    server: 162.159.1.33
+    port: 8080
     cipher: auto
-    uuid: 414365d6-12fb-3530-8135-ad14b8ad7726
+    uuid: d9c5ec6a-a8d8-4732-8447-56fbd2f93e96
     alterId: 0
-    tls: true
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: d9c5ec6a-a8d8-4732-8447-56fbd2f93e96-vm
+      headers:
+        host: pcs-referenced-camera-concerns.trycloudflare.com
+  - &id003
+    name: 🇨🇳_CN_中国->🇺🇸_US_美国_2
+    type: vmess
+    server: 183.232.170.22
+    port: 30013
+    cipher: auto
+    uuid: 5635bc13-e51c-4381-ae56-949406fbd3ba
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: tcp
+  - &id004
+    name: 🇨🇳_CN_中国->🇵🇸_PS_巴勒斯坦
+    type: vmess
+    server: 183.232.170.22
+    port: 30015
+    cipher: auto
+    uuid: 5635bc13-e51c-4381-ae56-949406fbd3ba
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: tcp
+  - &id005
+    name: 🇺🇸_US_美国->🇩🇪_DE_德国
+    type: vmess
+    server: 104.21.20.19
+    port: 80
+    cipher: auto
+    uuid: 4be6650b-41be-4878-a28e-553fc4fb73e8
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: de2.xv2ray.net
+  - &id006
+    name: 🇨🇳_CN_中国->🇭🇰_HK_香港
+    type: vmess
+    server: 223.113.130.55
+    port: 52052
+    cipher: auto
+    uuid: c7395784-c77d-390a-9db6-67152462b95b
+    alterId: 0
+    tls: false
     skip-cert-verify: true
     network: ws
     ws-opts:
       path: /db00
       headers:
-        host: cache-hk-2.cn-db.top
-  - &id004
-    name: 🇺🇸_US_美国_1
-    type: vmess
-    server: 2.namesilo123.top
-    port: 80
-    cipher: auto
-    uuid: 4d68da82-e8d0-4eaa-aec9-0df4a23e1a04
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /?ed=2048
-      headers:
-        host: freezhang.sanfen002.top
-  - &id005
-    name: 🇺🇸_US_美国_2
-    type: vmess
-    server: cfcdn1.sanfencdn9.com
-    port: 2052
-    cipher: auto
-    uuid: 8e0fc6e0-1313-4767-b51c-5506680d534e
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /video/QXjZG5u4F2
-      headers:
-        host: us3AJ8biuQx.fzbqfrse.xyz
-  - &id006
-    name: 🇺🇸_US_美国->🇨🇦_CA_加拿大_1
-    type: vmess
-    server: yh1.freeh1.xyz
-    port: 8080
-    cipher: auto
-    uuid: ef8c954e-014f-4b36-8273-9b5086afab34
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: ef8c954e-014f-4b36-8273-9b5086afab34-vm
-      headers:
-        host: bibliographic-sword-sequence-advertisers.trycloudflare.com
+        host: cache-hk-1.cn-db.top
   - &id007
-    name: 🇫🇷_FR_法国
+    name: 🇨🇦_CA_加拿大->🇺🇸_US_美国
+    type: trojan
+    server: 23.227.38.11
+    port: 443
+    udp: true
+    password: b17fa17d-13a0-4e8a-a398-8e549ea8b208
+    sni: syndication-statutes-wanted-logo.trycloudflare.com
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /argox-tr
+  - &id008
+    name: 🇬🇧_GB_英国
+    type: trojan
+    server: 18.135.242.0
+    port: 22222
+    udp: true
+    password: telegram-id-privatevpns
+    sni: trojan.burgerip.co.uk
+    skip-cert-verify: false
+    network: tcp
+  - &id009
+    name: 🇨🇳_CN_中国
     type: vmess
-    server: 51.159.155.52
+    server: 223.113.130.55
+    port: 58080
+    cipher: auto
+    uuid: 75a68200-4d76-3eb6-b510-39b8e63b7823
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /db00
+      headers:
+        host: data-hk-2.cn-db.top
+  - &id010
+    name: 🇨🇳_CN_中国->🇺🇸_US_美国_3
+    type: vmess
+    server: 183.232.170.22
+    port: 30147
+    cipher: auto
+    uuid: 5635bc13-e51c-4381-ae56-949406fbd3ba
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: tcp
+  - &id011
+    name: 🇨🇦_CA_加拿大_1
+    type: vmess
+    server: 134.122.41.160
     port: 3389
     cipher: auto
     uuid: 9c050a86-d612-48f1-ec32-e573df08a1b7
@@ -102,21 +142,58 @@ proxies:
     tls: false
     skip-cert-verify: true
     network: http
-  - &id008
-    name: 🇨🇳_CN_中国->🇺🇸_US_美国_2
+  - &id012
+    name: 🇨🇳_CN_中国->🇺🇸_US_美国_4
     type: vmess
     server: 183.232.170.22
-    port: 30061
+    port: 30137
     cipher: auto
     uuid: 5635bc13-e51c-4381-ae56-949406fbd3ba
     alterId: 0
     tls: false
     skip-cert-verify: true
     network: tcp
-  - &id009
-    name: 🇨🇦_CA_加拿大->🇺🇸_US_美国_1
+  - &id013
+    name: 🇨🇳_CN_中国->🇺🇸_US_美国_5
     type: vmess
-    server: 23.227.38.22
+    server: 183.232.170.22
+    port: 30141
+    cipher: auto
+    uuid: 5635bc13-e51c-4381-ae56-949406fbd3ba
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: tcp
+  - &id014
+    name: 🇺🇸_US_美国_1
+    type: vmess
+    server: 104.26.4.57
+    port: 2095
+    cipher: auto
+    uuid: 6658a3a6-225a-4d33-a5d2-82cfde565b4e
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /api/v3/download.getFile
+      headers:
+        host: ssrsub.v03.ssrsub.com
+  - &id015
+    name: 🇨🇳_CN_中国->🇺🇸_US_美国_6
+    type: vmess
+    server: 183.232.170.22
+    port: 30129
+    cipher: auto
+    uuid: 5635bc13-e51c-4381-ae56-949406fbd3ba
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: tcp
+  - &id016
+    name: 🇺🇸_US_美国_2
+    type: vmess
+    server: yh1.dtku41.xyz
     port: 8080
     cipher: auto
     uuid: 9258153a-dc97-4e39-9037-009abfc4fed0
@@ -128,18 +205,18 @@ proxies:
       path: 9258153a-dc97-4e39-9037-009abfc4fed0-vm
       headers:
         host: per-essex-patterns-bowling.trycloudflare.com
-  - &id010
-    name: 🇨🇳_CN_中国->🇵🇸_PS_巴勒斯坦
+  - &id017
+    name: 🇨🇳_CN_中国->🇺🇸_US_美国_7
     type: vmess
     server: 183.232.170.22
-    port: 30015
+    port: 30032
     cipher: auto
     uuid: 5635bc13-e51c-4381-ae56-949406fbd3ba
     alterId: 0
     tls: false
     skip-cert-verify: true
     network: tcp
-  - &id011
+  - &id018
     name: 🇺🇸_US_美国->🇨🇦_CA_加拿大_2
     type: vmess
     server: yh3.freeh1.xyz
@@ -154,116 +231,19 @@ proxies:
       path: 82cb93a3-65a9-4dac-a2a7-d997b6c26d6a-vm
       headers:
         host: larger-marketing-amounts-skin.trycloudflare.com
-  - &id012
-    name: 🇨🇳_CN_中国->🇺🇸_US_美国_3
-    type: vmess
-    server: 183.232.170.22
-    port: 30145
-    cipher: auto
-    uuid: 5635bc13-e51c-4381-ae56-949406fbd3ba
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: tcp
-  - &id013
-    name: 🇱🇺_LU_卢森堡_1
-    type: vmess
-    server: 78.111.102.232
-    port: 3389
-    cipher: auto
-    uuid: 9c050a86-d612-48f1-ec32-e573df08a1b7
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: http
-  - &id014
-    name: 🇨🇳_CN_中国->🇺🇸_US_美国_4
-    type: vmess
-    server: 183.232.170.22
-    port: 30032
-    cipher: auto
-    uuid: 5635bc13-e51c-4381-ae56-949406fbd3ba
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: tcp
-  - &id015
-    name: 🇱🇺_LU_卢森堡_2
-    type: vmess
-    server: 45.82.31.164
-    port: 3389
-    cipher: auto
-    uuid: 9c050a86-d612-48f1-ec32-e573df08a1b7
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: http
-  - &id016
-    name: 🇨🇳_CN_中国->🇺🇸_US_美国_5
-    type: vmess
-    server: 183.232.170.22
-    port: 30129
-    cipher: auto
-    uuid: 5635bc13-e51c-4381-ae56-949406fbd3ba
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: tcp
-  - &id017
-    name: 🇨🇭_CH_瑞士->🇭🇰_HK_香港_2
-    type: vmess
-    server: 64.110.78.246
-    port: 21203
-    cipher: auto
-    uuid: 414365d6-12fb-3530-8135-ad14b8ad7726
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /db00
-      headers:
-        host: data-hk-3.cn-db.top
-  - &id018
-    name: 🇰🇷_KR_韩国->🇭🇰_HK_香港_2
-    type: vmess
-    server: 130.162.151.122
-    port: 32453
-    cipher: auto
-    uuid: 414365d6-12fb-3530-8135-ad14b8ad7726
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /db00
-      headers:
-        host: cache-hk-2.cn-db.top
   - &id019
-    name: 🇺🇸_US_美国->🇷🇺_RU_俄罗斯联邦
-    type: trojan
-    server: 172.67.204.84
-    port: 443
-    udp: true
-    password: qj1Dz1CJmFQRhWr1SP80aA
-    sni: cdn-21.gsmxreality.com
-    skip-cert-verify: true
-    network: grpc
-    grpc-opts:
-      grpc-service-name: 443trojan
-  - &id020
-    name: 🇨🇳_CN_中国->🇺🇸_US_美国_6
+    name: 🇨🇳_CN_中国->🇺🇸_US_美国_8
     type: vmess
     server: 183.232.170.22
-    port: 30013
+    port: 30051
     cipher: auto
     uuid: 5635bc13-e51c-4381-ae56-949406fbd3ba
     alterId: 0
     tls: false
     skip-cert-verify: true
     network: tcp
-  - &id021
-    name: 🇨🇳_CN_中国->🇺🇸_US_美国_7
+  - &id020
+    name: 🇨🇳_CN_中国->🇺🇸_US_美国_9
     type: vmess
     server: 183.232.170.22
     port: 30058
@@ -273,10 +253,51 @@ proxies:
     tls: false
     skip-cert-verify: true
     network: tcp
-  - &id022
-    name: 🇨🇦_CA_加拿大_1
+  - &id021
+    name: 🇺🇸_US_美国->🇨🇦_CA_加拿大_3
     type: vmess
-    server: 134.122.41.160
+    server: yh2.freeh1.xyz
+    port: 8080
+    cipher: auto
+    uuid: 028c8131-9e3e-4836-94ac-ea7f24d4d05a
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: 028c8131-9e3e-4836-94ac-ea7f24d4d05a-vm
+      headers:
+        host: nest-emily-healing-h.trycloudflare.com
+  - &id022
+    name: 🇨🇳_CN_中国->🇺🇸_US_美国_10
+    type: vmess
+    server: 183.232.170.22
+    port: 30145
+    cipher: auto
+    uuid: 5635bc13-e51c-4381-ae56-949406fbd3ba
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: tcp
+  - &id023
+    name: 🇨🇦_CA_加拿大_2
+    type: vmess
+    server: 23.227.38.23
+    port: 8080
+    cipher: auto
+    uuid: 34c0bb5e-c120-432d-9c58-bd7d82c7397b
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: 34c0bb5e-c120-432d-9c58-bd7d82c7397b-vm
+      headers:
+        host: uh-lawyers-instruments-kernel.trycloudflare.com
+  - &id024
+    name: 🇫🇷_FR_法国
+    type: vmess
+    server: 51.159.155.52
     port: 3389
     cipher: auto
     uuid: 9c050a86-d612-48f1-ec32-e573df08a1b7
@@ -284,74 +305,7 @@ proxies:
     tls: false
     skip-cert-verify: true
     network: http
-  - &id023
-    name: 🇺🇸_US_美国_3
-    type: vmess
-    server: 172.64.161.60
-    port: 2052
-    cipher: auto
-    uuid: 8e0fc6e0-1313-4767-b51c-5506680d534e
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /video/QXjZG5u4F2
-      headers:
-        host: us3AJ8biuQx.fzbqfrse.xyz
-  - &id024
-    name: 🇨🇦_CA_加拿大_2
-    type: vmess
-    server: 23.227.39.24
-    port: 8080
-    cipher: auto
-    uuid: 9258153a-dc97-4e39-9037-009abfc4fed0
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: 9258153a-dc97-4e39-9037-009abfc4fed0-vm
-      headers:
-        host: per-essex-patterns-bowling.trycloudflare.com
   - &id025
-    name: 🇨🇳_CN_中国->🇺🇸_US_美国_8
-    type: vmess
-    server: 183.232.170.22
-    port: 30137
-    cipher: auto
-    uuid: 5635bc13-e51c-4381-ae56-949406fbd3ba
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: tcp
-  - &id026
-    name: 🇩🇪_DE_德国
-    type: vmess
-    server: cloudflare.cfgo.cc
-    port: 80
-    cipher: auto
-    uuid: 22a13aa2-4854-44cb-e090-ec71ab84b1ff
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: wap.hostmjj.com
-  - &id027
-    name: 🇨🇳_CN_中国->🇺🇸_US_美国_9
-    type: vmess
-    server: 183.232.170.22
-    port: 30141
-    cipher: auto
-    uuid: 5635bc13-e51c-4381-ae56-949406fbd3ba
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: tcp
-  - &id028
     name: 🇦🇪_AE_阿联酋->🇬🇧_GB_英国
     type: vmess
     server: 94.140.0.110
@@ -366,110 +320,21 @@ proxies:
       path: /
       headers:
         host: food.zhaal.ir
-  - &id029
-    name: 🇨🇭_CH_瑞士->🇭🇰_HK_香港_3
+  - &id026
+    name: 🇺🇸_US_美国->🇨🇦_CA_加拿大_4
     type: vmess
-    server: 64.110.65.177
-    port: 25856
+    server: fbi.gov
+    port: 8080
     cipher: auto
-    uuid: 414365d6-12fb-3530-8135-ad14b8ad7726
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /db00
-      headers:
-        host: cache-hk-1.cn-db.top
-  - &id030
-    name: 🇨🇳_CN_中国->🇺🇸_US_美国_10
-    type: vmess
-    server: 183.232.170.22
-    port: 30051
-    cipher: auto
-    uuid: 5635bc13-e51c-4381-ae56-949406fbd3ba
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: tcp
-  - &id031
-    name: 🇨🇭_CH_瑞士->🇭🇰_HK_香港_4
-    type: vmess
-    server: 64.110.78.246
-    port: 21205
-    cipher: auto
-    uuid: 414365d6-12fb-3530-8135-ad14b8ad7726
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /db00
-      headers:
-        host: cache-hk-2.cn-db.top
-  - &id032
-    name: 🇨🇳_CN_中国->🇺🇸_US_美国_11
-    type: vmess
-    server: 183.232.170.22
-    port: 30147
-    cipher: auto
-    uuid: 5635bc13-e51c-4381-ae56-949406fbd3ba
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: tcp
-  - &id033
-    name: 🇨🇭_CH_瑞士->🇭🇰_HK_香港_5
-    type: vmess
-    server: 64.110.78.246
-    port: 45703
-    cipher: auto
-    uuid: 414365d6-12fb-3530-8135-ad14b8ad7726
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /db00
-      headers:
-        host: data-hk-1.cn-db.top
-  - &id034
-    name: 🇺🇸_US_美国->🇫🇷_FR_法国
-    type: vmess
-    server: s1c.v2.v001sss.xyz
-    port: 2082
-    cipher: auto
-    uuid: 112ac36f-3f53-4e26-8371-d25c028e1b9a
+    uuid: ef8c954e-014f-4b36-8273-9b5086afab34
     alterId: 0
     tls: false
     skip-cert-verify: true
     network: ws
     ws-opts:
-      path: /
+      path: ef8c954e-014f-4b36-8273-9b5086afab34-vm
       headers:
-        host: s1c.v2.v001sss.xyz
-  - &id035
-    name: 🇺🇸_US_美国_4
-    type: trojan
-    server: 2usmax01.170203.xyz
-    port: 7454
-    udp: true
-    password: 7e5f9c76-bda8-4f0c-8113-36078efec3c9
-    sni: 2usmax01.170203.xyz
-    skip-cert-verify: true
-    network: tcp
-  - &id036
-    name: 🇨🇦_CA_加拿大->🇺🇸_US_美国_2
-    type: trojan
-    server: 23.227.38.11
-    port: 443
-    udp: true
-    password: b17fa17d-13a0-4e8a-a398-8e549ea8b208
-    sni: syndication-statutes-wanted-logo.trycloudflare.com
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /argox-tr
+        host: bibliographic-sword-sequence-advertisers.trycloudflare.com
 proxy-groups:
   - name: PROXY
     type: select
@@ -522,16 +387,6 @@ proxy-groups:
       - *id024
       - *id025
       - *id026
-      - *id027
-      - *id028
-      - *id029
-      - *id030
-      - *id031
-      - *id032
-      - *id033
-      - *id034
-      - *id035
-      - *id036
   - name: LOAD-BALANCE
     type: load-balance
     url: http://www.gstatic.com/generate_204
@@ -563,16 +418,6 @@ proxy-groups:
       - *id024
       - *id025
       - *id026
-      - *id027
-      - *id028
-      - *id029
-      - *id030
-      - *id031
-      - *id032
-      - *id033
-      - *id034
-      - *id035
-      - *id036
   - name: SELECT
     type: select
     proxies:
@@ -602,16 +447,6 @@ proxy-groups:
       - *id024
       - *id025
       - *id026
-      - *id027
-      - *id028
-      - *id029
-      - *id030
-      - *id031
-      - *id032
-      - *id033
-      - *id034
-      - *id035
-      - *id036
 rules:
   - RULE-SET,applications,DIRECT
   - DOMAIN,clash.razord.top,DIRECT
